<?xml version="1.0"?>
<package format="2">
  <name>barcode_finder</name>
  <version>0.0.0</version>
  <description>The barcode_finder package</description>

  <maintainer email="azucena.mendoza31@gmail.com">Azucena Mendoza</maintainer>

  <license>GPLv2+</license>

  <author email="azucena.mendoza31@gmail.com">Azucena Mendoza</author>

  <depend>roscpp</depend>
  <depend>asr_halcon_bridge</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>refills_msgs</depend>
  <depend>tf</depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
